--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ body, html {
     height: 100%;
 }
 
+main .site-title h1, h3{
+    margin: .3rem;
+}
+
 
 .nav-itemsul {
     list-style: none;
@@ -73,17 +77,18 @@ a {
 }
 
 .center-text {
-    position: absolute;
-    left: 50%;
-    top: 40%;
-    transform: translate(-50%, -50%);
+    height: 565px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     text-align: center;
+    margin: auto;
     font-size: 160%;
     text-shadow: 2px 2px black;
 }
 
 main .site-title .site-background{
-    height: 100vh;
+    height: 565px;
     text-align: center;
     background-size: cover;
     background-position: center;
@@ -92,21 +97,17 @@ main .site-title .site-background{
 }
 
 
-#explorebtn {
+.explorebtn {
     color: white;
-}
-
-button.btn{
-    border: none;
-    border-radius: 2rem;
-    padding: 1rem 3rem;
+    display: block;
+    background-color: black;
+    padding: 10px;
+    margin: 15px auto;
     font-size: 1rem;
-    font-family: 'Lato';
-    cursor: pointer;
-}
-
-main .site-title h1, h3{
-    margin: .3rem;
+    width: 10%;
+    border-radius: 2rem;
+    border: 1px solid black;
+    
 }
 
 main .site-title .btn{
@@ -115,7 +116,7 @@ main .site-title .btn{
     color: #fff;
 }
 
-main .site-title .btn:hover{
+main .site-title .explorebtn:hover{
     background: transparent;
     border: 1px solid white;
     color: white;
@@ -141,12 +142,14 @@ main .site-title .btn:hover{
 
 .latest-posts .list-post-latest {
     display: flex;
+    flex-flow: row wrap;
     margin-bottom: 4.5%;
 }
 
 .latest-posts .list-post-latest .list-post {
     text-align: justify;
-    margin-left: 3%;
+    margin-left: 50px;
+    margin-top: 20px;
     background: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.4)), url(blogpost.jpg);
     background-size: cover;
     color: white;
@@ -158,8 +161,9 @@ main .site-title .btn:hover{
     border: 5px solid #e2e2e2;
     transition: all, 0.5s;
     height: 250px;
+    width: 220px;
     letter-spacing: 0.3px;
-    line-height: 185%;
+    line-height: 23px;
     text-shadow: 2px 2px black;
     
 }
@@ -177,7 +181,27 @@ main .site-title .btn:hover{
     background-color: #f7f3ef;
 }
 
+.see-all-latest-posts a h3{
+    font-size: 15px;
+    font-weight: 300;
+    margin-left: 53px;
+    margin-bottom: 20px;
+    background-color: black;
+    border-radius: 50px;
+    display: inline-block;
+    padding: 7px 25px;
+    color: white;
+    border: solid 2px black;
+}
+.see-all-latest-posts a h3:hover{
+    background: transparent;
+    border: solid 2px black;
+    color: black;
+}
+
 .popular-posts {
+    display: flex;
+    flex-flow: column wrap;
     width: 30%;
     background-color: #f0ebe7;
     
@@ -185,8 +209,9 @@ main .site-title .btn:hover{
 
 .list-post-popular {
     width: 70%;
+    margin-top: 20px;
     text-align: justify;
-    line-height: 185%;
+    line-height: 23px;
     margin-left: 10%;
     background-color: antiquewhite;
     padding: 4%;
@@ -217,6 +242,7 @@ footer.footer{
 
 footer.footer .container{
     display: flex;
+    flex-flow: row wrap;
     justify-content: center;
     margin: auto;
 }
@@ -230,15 +256,17 @@ footer.footer .container > div{
 
 footer.footer .container h2{
     color: #fff;
+    margin-bottom: 10px;
 }
 
 footer.footer .container p{
     color: #a0a0a0;
+    line-height: 23px
 }
 
 footer.footer .newsletter .form-element{
     background: #000;
-    display: inline-block;
+    display: flex;;
 }
 
 #down-subscribe {
@@ -251,13 +279,13 @@ footer.footer .newsletter .form-element input{
     border: none;
     background: transparent;
     color: white;
-    font-family: var(--Josefin);
+    font-family: 'Lato';
     font-size: 1rem;
     width: 74%;
 }
 
 footer.footer .newsletter .form-element span{
-    background: var(--sky);
+    background: black;
     padding: .5rem .7rem;
     cursor: pointer;
 }
@@ -286,15 +314,72 @@ footer.footer .rights{
 .social-links {
     color: white;
     display: flex;
-    justify-content: space-between;
-    width: 35%;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    width: 75%;
     margin-top: 5%;
 }
-
+.social-links ion-icon {
+    margin: 10px;
+}
 
 /* ---------x------- Footer ----------x---------- */
 
 /*              Viewport less then or equal to 1130px            */
+
+@media only screen and (max-width: 800px) {
+    .latest-posts {
+        width: 60%;
+        
+    }
+    .popular-posts {
+        width: 40%;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .latest-posts .list-post-latest .list-post {
+        height: 230px;
+        width: 200px;
+    }
+    
+
+}
+@media only screen and (max-width: 575px) {
+    .container-main {
+        flex-flow: row wrap;
+    }
+    .latest-posts {
+        width: 100%;
+        
+    }
+    .popular-posts {
+        width: 100%;
+    }
+    .latest-posts .list-post-latest .list-post {
+        height: 250px;
+        width: 250px;
+    }
+    .center-text a{
+        font-size: 13px;
+        padding: 12px
+    }
+}
+@media only screen and (max-width: 415px) {
+    .latest-posts .list-post-latest .list-post {
+        height: 220px;
+        width: 200px;
+    }
+    .nav-link a {
+        font-size: 90%;
+    }
+}
+@media only screen and (max-width: 415px) {
+    .explorebtn {
+        width: 60px;
+    }
+}
+
 
 @media only screen and (max-width: 1130px){
     .site-content .post-content > .post-image .post-info{
