--- a/css/style-post-description.css
+++ b/css/style-post-description.css
@@ -19,10 +19,11 @@ p {
 }
 
 .add-to-fav {
-    margin-top: 2%;
-    margin: 3% 5% 3% 80%;
+    margin-top: 35px;
+    margin-left: 81.3%;
+    margin-right: 3.2rem;
+    width: 182px;    
     display: flex;
-    max-width: 100%;
     border: solid 2px black;
     border-radius: 50px;
 }
@@ -32,7 +33,8 @@ p {
 }
 .add-to-fav-text {
     text-align: center;
-    display: block;
+    display: flex;
+    justify-content: space-around;
     padding: 4%;
     vertical-align: middle;
     margin: auto;
@@ -41,7 +43,7 @@ p {
 .add-to-fav-text:hover {
     color: white;
 }
-.heart-icon:hover {
+.add-to-fav-text:hover .heart-icon {
     color: white
 }
 .heart-icon {
@@ -69,8 +71,8 @@ p {
     justify-items: center;
 }
 .author-image {
-    height: 70px;
-    width: 80px;
+    height: 80px;
+    width: 100px;
     border-radius: 50%;   
 }
 .author-name {
@@ -123,11 +125,11 @@ p {
 footer.footer{
     background: #191919;
     position: relative;
-    
 }
 
 footer.footer .container{
     display: flex;
+    flex-flow: row wrap;
     justify-content: center;
     margin: auto;
 }
@@ -141,15 +143,17 @@ footer.footer .container > div{
 
 footer.footer .container h2{
     color: #fff;
+    margin-bottom: 10px;
 }
 
 footer.footer .container p{
     color: #a0a0a0;
+    line-height: 23px
 }
 
 footer.footer .newsletter .form-element{
     background: #000;
-    display: inline-block;
+    display: flex;;
 }
 
 #down-subscribe {
@@ -162,13 +166,13 @@ footer.footer .newsletter .form-element input{
     border: none;
     background: transparent;
     color: white;
-    font-family: var(--Josefin);
+    font-family: 'Lato';
     font-size: 1rem;
     width: 74%;
 }
 
 footer.footer .newsletter .form-element span{
-    background: var(--sky);
+    background: black;
     padding: .5rem .7rem;
     cursor: pointer;
 }
@@ -197,15 +201,91 @@ footer.footer .rights{
 .social-links {
     color: white;
     display: flex;
-    justify-content: space-between;
-    width: 35%;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    width: 75%;
     margin-top: 5%;
 }
-
+.social-links ion-icon {
+    margin: 10px;
+}
 
 /* ---------x------- Footer ----------x---------- */
 
 /*              Viewport less then or equal to 1130px            */
+
+@media only screen and (max-width: 1010px){
+    .add-to-fav {
+        margin-left: 8%;
+        width: 150px;
+        
+    }
+    .add-to-fav p{
+        font-size: 90%;
+    }
+    .add-to-fav ion-icon{
+        font-size: 90%;
+        margin-top: 2px;
+    }
+}
+@media only screen and (max-width: 800px){
+    .title {
+    text-align: center;
+    font-size: 20px;
+}
+    .date {
+    font-size: 14px;
+    margin-top: 1%;
+    color: grey;
+    }
+ 
+    .author-image {
+        height: 50px;
+        width: 65px;
+        border-radius: 50%;   
+    }
+    .author-name {
+        font-size: 90%;
+    }
+}
+@media only screen and (max-width: 540px){
+    .title {
+    text-align: center;
+    font-size: 15px;
+    margin-top: 30px;
+}
+    .date {
+    font-size: 12px;
+    margin-top: 1%;
+    color: grey;
+    }
+ 
+    .author-image {
+        height: 50px;
+        width: 65px;
+        border-radius: 50%;  
+    }
+    .author-name {
+        font-size: 90%;
+    }
+    .author{
+        margin-top: 30px;
+    }
+    .add-to-fav {
+        margin-left: 5%;
+        width: 120px;
+        padding: 3px;
+        
+    }
+    .add-to-fav p{
+        font-size: 80%;
+    }
+    .add-to-fav ion-icon{
+        font-size: 80%;
+        margin-top: 2px;
+    }
+}
+
 
 @media only screen and (max-width: 1130px){
     .site-content .post-content > .post-image .post-info{
@@ -283,34 +363,6 @@ footer.footer .rights{
 }
 
 /*        x      Viewport less then or equal to 520px       x     */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
